make basic prototype work

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,23 @@
 
     <body>
         <div id="nav">
-
+            <div id="repo-details">
+                <h3 id="repo-name"></h3>
+                <p id="repo-description"></p>
+                <div>
+                    <a id="repo-url"></a>
+                    <div>
+                        <i class="fas fa-star"></i> <span id="repo-stars"></span>
+                        <i class="fas fa-code-branch"></i> <span id="repo-forks"></span>
+                    </div>
+                </div>
+            </div>
         </div>
+        <button id="repo-btn">Stumble to another</button>
 
-        <div id="repo-page">
+        <iframe id="repo-homepage">
 
-        </div>
+        </iframe>
     </body>
 
 </html>
